update giao diện user

--- a/dev1-Phuong/user/app/views/userPage.html
+++ b/dev1-Phuong/user/app/views/userPage.html
@@ -58,7 +58,12 @@
 
           <li class="nav-item ">
             <a class="nav-link" href="#">
-              <i class="fa-solid fa-cart-shopping"></i>
+              <a class="nav-link js-toggle-cart active" role="button" aria-haspopup="true" aria-expanded="false">
+                <div class="iconCart">
+                  <i class="fa-solid fa-xl fa-shopping-cart"></i>
+                  <span class="badge rounded-pill badge-notification bg-light text-dark" id="cartCount">0</span>
+                </div>
+              </a>
             </a>
           </li>
         </ul>
