--- a/dev1-Phuong/assets/css/userPage.css
+++ b/dev1-Phuong/assets/css/userPage.css
@@ -28,7 +28,8 @@ header .navbar .nav-item .nav-link {
     font-size: 1.1rem;
     font-weight: 600;
     color: #FFF;
-    padding: 18px;
+    padding: 1px;
+    margin-right: 30px;
     transition: all 0.5s;
 }
 
@@ -40,6 +41,19 @@ header #navbarSupportedContent a:hover{
     transform: scale(1.20);
     color: #00FF00;
 }
+
+.nav-link .badge {
+    position: relative;
+    padding: 0.2em 0.5em;
+    top: -10px;
+    left: -12px;
+    z-index: 1;
+}
+
+.nav-item .nav-link i{
+    font-size: 25px;
+}
+
 
 @media screen and (max-width: 992px) {
     header .navbar-toggler {
@@ -75,14 +89,23 @@ header #navbarSupportedContent a:hover{
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: 30px;
-    margin-top: 40px;
+    margin-top: 70px;
 }
 
 .mainCart{
     background: #FFF;
     padding: 30px 45px;
     border-radius: 12px;
+    transition: all 0.5s;
 }
+
+.mainCart:hover{
+    transform: translateY(-25px);
+    box-shadow: 0 5px 35px 0px rgba(0, 0, 0, 0.5);
+
+}
+
+
 
 .cardTop img{
     max-width: 100%;
@@ -108,4 +131,8 @@ header #navbarSupportedContent a:hover{
 .active .cartBottom button {
     margin-top: 27px;
 }
+
+
+
+
 
