--- a/dev1-Phuong/user/app/views/userPage.html
+++ b/dev1-Phuong/user/app/views/userPage.html
@@ -19,8 +19,7 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 
   <!-- BOOTSTRAP -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
-    integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 
   <!-- MAIN CSS -->
@@ -36,7 +35,7 @@
       </button>
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav ml-auto">
+        <ul class="navbar-nav ms-auto">
           <li class="nav-item">
             <a class="nav-link" href="../../../home/homePage.html">Home Page</a>
           </li>
@@ -44,21 +43,10 @@
           <li class="nav-item">
             <a class="nav-link" href="#">Admin Page</a>
           </li>
-          
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-              aria-haspopup="true" aria-expanded="false">
-              Type of phone
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item">IPhone</a>
-              <a class="dropdown-item">SamSung</a>
-            </div>
-          </li>
 
           <li class="nav-item ">
             <a class="nav-link" href="#">
-              <a class="nav-link js-toggle-cart active" role="button" aria-haspopup="true" aria-expanded="false">
+              <a class="nav-link js-toggle-cart active"  data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight" role="button" aria-haspopup="true" aria-expanded="false">
                 <div class="iconCart">
                   <i class="fa-solid fa-xl fa-shopping-cart"></i>
                   <span class="badge rounded-pill badge-notification bg-light text-dark" id="cartCount">0</span>
@@ -72,7 +60,18 @@
     </nav>
   </header>
 
+  
+
   <section class="product">
+
+    <div class="">
+      <select class="form-select w-25" aria-label="Default select example">
+        <option selected value="All">Category</option>
+        <option value="Apple">Apple</option>
+        <option value="Samsung">Samsung</option>
+      </select>
+    </div>
+    
     <div class="mainItem">
       <div class="cartItem text-center">
         <div class="mainCart active">
@@ -136,14 +135,17 @@
     </div>
   </section>
 
+  <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
+    <div class="offcanvas-body">
+      
+    </div>
+  </div>
 
   <!-- JS BOOTSTRAP -->
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
     crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
-    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
 
   <!-- CDN AXIOS -->
