--- a/dev1-Phuong/user/app/views/userPage.html
+++ b/dev1-Phuong/user/app/views/userPage.html
@@ -10,24 +10,29 @@
   <!-- GOOGLE FONTS -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;600;700&display=swap"
-      rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
 
   <!-- FONT-AWESOME  -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
     integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 
+
+    <!-- Carousel2 -->
+    <link rel="stylesheet" href="../../assets/lib/owlcarousel/assets/owl.carousel.min.css">
+    <link rel="stylesheet" href="../../assets/lib/owlcarousel/assets/owl.theme.default.min.css">
+
   <!-- BOOTSTRAP -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 
-  <!-- MAIN CSS -->
-  <link rel="stylesheet" href="../../../assets/css/userPage.css">
+<!-- MAIN CSS -->
+<link rel="stylesheet" href="../../../assets/css/userPage.css">
 
 <body>
   <header>
-    <nav class=" container navbar navbar-expand-lg">
+    <nav class="container navbar navbar-expand-lg">
       <a class="navbar-brand" href="#">TechStore</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -41,96 +46,39 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="#">Admin Page</a>
+            <a class="nav-link" href="../../../admin/views/adminPage.html">Admin Page</a>
           </li>
 
           <li class="nav-item ">
             <a class="nav-link" href="#">
-              <a class="nav-link js-toggle-cart active"  data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight" role="button" aria-haspopup="true" aria-expanded="false">
+              <a class="nav-link js-toggle-cart active" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight"
+                aria-controls="offcanvasRight" role="button" aria-haspopup="true" aria-expanded="false">
                 <div class="iconCart">
-                  <i class="fa-solid fa-xl fa-shopping-cart"></i>
+                  <i class="fa-solid fa-xl fa-shopping-cart" id="iconCart"></i>
                   <span class="badge rounded-pill badge-notification bg-light text-dark" id="cartCount">0</span>
                 </div>
               </a>
             </a>
           </li>
         </ul>
-
       </div>
     </nav>
   </header>
 
-  
-
   <section class="mainProduct">
 
     <div class="">
-      <select class="form-select w-25" aria-label="Default select example">
+      <select class="form-select w-25" id="selectList" onchange="filterProduct(this)"
+        aria-label="Default select example">
         <option selected value="All">Category</option>
-        <option value="Apple">Apple</option>
+        <option value="Iphone">Apple</option>
         <option value="Samsung">Samsung</option>
       </select>
     </div>
-    
+
     <div class="mainItem">
-      <div class="cartItem text-center">
-        <div class="mainCart active">
-          <div class="cardTop">
-            <img src="../../../assets/img/iphone-x-64gb-hh-600x600.jpg" alt="#">
-          </div>
-          <div class="cartBody active">
-            <h2>IphoneX</h2>
-            <h3>$1000</h3>
-            <p>Camera trước: 7 MP <br> Camera sau: 2 camera 12 MP</p>
-          </div>
-          <div class="cartBottom ">
-            <button class="btn btn-success">Thêm vào giỏ hàng</button>
-          </div>
-          
-        </div>
 
-        <div class="mainCart">
-          <div class="cardTop">
-            <img src="../../../assets/img/samsung-galaxy-m51-trang-new-600x600-600x600.jpg" alt="#">
-          </div>
-          <div class="cartBody">
-            <h2>Samsung Galaxy M51</h2>
-            <h3>$3500</h3>
-            <p>Camera trước: 32 MP <br> Camera sau: Chính 64 MP và Phụ 12 MP, 5 MP, 5 MP </p>
-          </div>
-          <div class="cartBottom">
-            <button class="btn btn-success">Thêm vào giỏ hàng</button>
-          </div>
-        </div>
-
-        <div class="mainCart">
-          <div class="cardTop">
-            <img src="../../../assets/img/samsung-galaxy-m22-trang-new-600x600-600x600.jpg" alt="#">
-          </div>
-          <div class="cartBody">
-            <h2>Samsung Galaxy M22</h2>
-            <h3>$45000</h3>
-            <p>Camera trước: 32 MP <br> Camera sau: Chính 12 MP và Phụ 64 MP, 12 MP </p>
-          </div>
-          <div class="cartBottom">
-            <button class="btn btn-success">Thêm vào giỏ hàng</button>
-          </div> 
-        </div>
-
-        <div class="mainCart">
-          <div class="cardTop">
-            <img src="../../../assets/img/iphone-11-pro-max-256gb-didongviet_23.jpg" alt="#">
-          </div>
-          <div class="cartBody">
-            <h2>Iphone 11</h2>
-            <h3>$1000</h3>
-            <p>Camera trước: 32 MP <br> Camera sau: Camera Chính 12 MP và Phụ 64 MP & 12MP </p>
-          </div>
-          <div class="cartBottom">
-            <button class="btn btn-success">Thêm vào giỏ hàng</button>
-          </div>
-          
-        </div>
+      <div id="tblDanhSachSP" class="row d-flex justify-content-center cartItem text-center">
       </div>
     </div>
   </section>
@@ -142,52 +90,6 @@
           <h2>Shopping Cart</h2>
           <p class="microcopy">An overview of your selected products.</p>
           <div class="products" id="cartList">
-            <div class="product">
-              <div class="product__1">
-                <div class="product__thumbnail">
-                  <img src="https://cdn.tgdd.vn/Products/Images/42/114115/iphone-x-64gb-hh-600x600.jpg" alt="Italian Trulli">
-                </div>
-                <div class="product__details">
-                  <div><b>iphoneX</b></div>
-                  <div class="tertiary"><span>screen 68</span></div>
-                  <div>Back Camera: <span class="tertiary">2 camera 12 MP</span></div>
-                  <div>Front Camera: <span class="tertiary">7 MP</span></div>
-                  <div><a href="#!" onclick="">Remove</a></div>
-                </div>
-              </div>
-              <div class="product__2">
-                <div class="qty">
-                  <span><b>Quantity:</b> </span> &nbsp; &nbsp;
-                  <span class="minus bg-dark" onclick="">-</span>
-                  <span class="quantityResult mx-2">1</span>
-                  <span class="plus bg-dark" onclick="">+</span>
-                </div>
-                <div class="product__price"><b>$1000</b></div>
-              </div>
-            </div>
-            <div class="product">
-              <div class="product__1">
-                <div class="product__thumbnail">
-                  <img src="https://cdn.tgdd.vn/Products/Images/42/114115/iphone-x-64gb-hh-600x600.jpg" alt="Italian Trulli">
-                </div>
-                <div class="product__details">
-                  <div><b>iphoneX</b></div>
-                  <div class="tertiary"><span>screen 68</span></div>
-                  <div>Back Camera: <span class="tertiary">2 camera 12 MP</span></div>
-                  <div>Front Camera: <span class="tertiary">7 MP</span></div>
-                  <div><a href="#!" onclick="">Remove</a></div>
-                </div>
-              </div>
-              <div class="product__2">
-                <div class="qty">
-                  <span><b>Quantity:</b> </span> &nbsp; &nbsp;
-                  <span class="minus bg-dark" onclick="">-</span>
-                  <span class="quantityResult mx-2">1</span>
-                  <span class="plus bg-dark" onclick="">+</span>
-                </div>
-                <div class="product__price"><b>$1000</b></div>
-              </div>
-            </div>
           </div>
 
         </div>
@@ -202,7 +104,7 @@
                 <th class="align-left font-normal tertiary">
                   Shipping <small>(estimated)</small>
                 </th>
-                <td class="align-right" id="shipping">$0</td>
+                <td class="align-right" id="shipping">$100</td>
               </tr>
               <tr>
                 <th class="align-left font-normal tertiary">
@@ -225,9 +127,9 @@
           </table>
           <div class="form__footer d-flex">
             <button class="btn btn-cart first js-toggle-cart">Continue Shopping</button>
-            <button class="btn btn-cart green-btn" onclick="">Pay Now</button>
-            <button class="btn btn-cart red-btn me-5 ms-0 px-4" onclick="" id="emptyCart">
-              <i class="fa-solid fa-trash me-2"></i> Empty Cart
+            <button class="btn btn-cart green-btn" onclick="payNow()">Pay Now</button>
+            <button class="btn btn-cart red-btn me-5 ms-0 px-4" onclick="clearCart()">
+              <i class="fa-solid fa-trash me-2"></i> Clear Cart
             </button>
           </div>
         </div>
@@ -235,19 +137,32 @@
     </div>
   </div>
 
+
+  <script src="https://code.jquery.com/jquery-3.6.1.min.js"
+    integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
+
+
   <!-- JS BOOTSTRAP -->
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
     crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
 
+  <!-- OWL CAROUSEL -->
+  <script src="../../assets/lib/owlcarousel/owl.carousel.min.js"></script>
+  <script src="../../assets/js/carousel.js"></script>
+
+  <!-- SWEET ALERT 2 -->
+  <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
   <!-- CDN AXIOS -->
   <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
 
-  <script src="../models/SanPham.js"></script>
   <script src="../services/SanPhamService.js"></script>
-
+  <script src="../models/CartItem.js"></script>
+  <script src="../models/ProductList.js"></script>
   <script src="../controllers/main.js"></script>
 
 </body>
