--- a/dev1-Phuong/user/app/views/userPage.html
+++ b/dev1-Phuong/user/app/views/userPage.html
@@ -33,7 +33,7 @@
 <body>
   <header>
     <nav class="container navbar navbar-expand-lg">
-      <a class="navbar-brand" href="#">TechStore</a>
+      <a class="navbar-brand" href="../../../home/homePage.html">TechStore</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
