--- a/dev2/admin/views/dashboard.html
+++ b/dev2/admin/views/dashboard.html
@@ -9,14 +9,14 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
-  <link rel="stylesheet" href="../../assets/css/main.css">
+  <link rel="stylesheet" href="../../admin.css">
 </head>
 
 <body>
   <div class="container">
-
     <header class="display-4 my-4 header" style="text-align: center;">
-      TRANG QUẢN TRỊ ADMIN
+      <a href="../../../dev1-Phuong/home/homePage.html">Home Page</a>
+      <h1>TRANG QUẢN TRỊ ADMIN</h1>
     </header>
     <!-- Phan tab menu -->
     <ul class="nav nav-tabs" role="tablist">
