--- a/dev1-Phuong/user/app/views/userPage.html
+++ b/dev1-Phuong/user/app/views/userPage.html
@@ -46,7 +46,7 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="../../../admin/views/adminPage.html">Admin Page</a>
+            <a class="nav-link" href="../../../../dev2/admin/views/dashboard.html">Admin Page</a>
           </li>
 
           <li class="nav-item ">
